; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_multi_partitioning_utils.c_GenerateDetachPartitionCommand.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_multi_partitioning_utils.c_GenerateDetachPartitionCommand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i8* }

@InvalidOid = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"\22%s\22 is not a partition\00", align 1
@.str.1 = private unnamed_addr constant [46 x i8] c"ALTER TABLE IF EXISTS %s DETACH PARTITION %s;\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @GenerateDetachPartitionCommand(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  %8 = call %struct.TYPE_4__* (...) @makeStringInfo()
  store %struct.TYPE_4__* %8, %struct.TYPE_4__** %3, align 8
  %9 = load i32, i32* @InvalidOid, align 4
  store i32 %9, i32* %4, align 4
  store i8* null, i8** %5, align 8
  store i8* null, i8** %6, align 8
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @PartitionTable(i32 %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %20, label %13

13:                                               ; preds = %1
  %14 = load i32, i32* %2, align 4
  %15 = call i8* @get_rel_name(i32 %14)
  store i8* %15, i8** %7, align 8
  %16 = load i32, i32* @ERROR, align 4
  %17 = load i8*, i8** %7, align 8
  %18 = call i32 @errmsg(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i8* %17)
  %19 = call i32 @ereport(i32 %16, i32 %18)
  br label %20

20:                                               ; preds = %13, %1
  %21 = load i32, i32* %2, align 4
  %22 = call i32 @get_partition_parent(i32 %21)
  store i32 %22, i32* %4, align 4
  %23 = load i32, i32* %2, align 4
  %24 = call i8* @generate_qualified_relation_name(i32 %23)
  store i8* %24, i8** %5, align 8
  %25 = load i32, i32* %4, align 4
  %26 = call i8* @generate_qualified_relation_name(i32 %25)
  store i8* %26, i8** %6, align 8
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %28 = load i8*, i8** %6, align 8
  %29 = load i8*, i8** %5, align 8
  %30 = call i32 @appendStringInfo(%struct.TYPE_4__* %27, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.1, i64 0, i64 0), i8* %28, i8* %29)
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 0
  %33 = load i8*, i8** %32, align 8
  ret i8* %33
}

declare dso_local %struct.TYPE_4__* @makeStringInfo(...) #1

declare dso_local i32 @PartitionTable(i32) #1

declare dso_local i8* @get_rel_name(i32) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errmsg(i8*, i8*) #1

declare dso_local i32 @get_partition_parent(i32) #1

declare dso_local i8* @generate_qualified_relation_name(i32) #1

declare dso_local i32 @appendStringInfo(%struct.TYPE_4__*, i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
